--- a/client/views/journal/story.html
+++ b/client/views/journal/story.html
@@ -16,8 +16,8 @@
         <p class="story-date-date">{{date_date}}</p>
       </div>
 
-      <a class="edit" href="#">Close</a>
-      <a class="close" href="#">Close</a>
+      <a class="story-buttons edit" href="#">Close</a>
+      <a class="story-buttons close" href="#">Close</a>
   </div>
 </div>
 
