--- a/client/style/_profile.scss
+++ b/client/style/_profile.scss
@@ -189,7 +189,7 @@
 
 
 $rowHeight: 180px;
-$columnWidth: 20%;
+$columnWidth: 25%;
 .profile-grid {
   width:100%;
   // max-height:$rowHeight*2;
@@ -303,6 +303,7 @@ $columnWidth: 20%;
     }
     @media screen and (min-width: $break-lg) {
       font-size:22px;
+      width:20%;
       height:$rowHeight*1.5;
       &.wide,&.large{height:$rowHeight*3;}
     }
