--- a/client/views/journal/story.html
+++ b/client/views/journal/story.html
@@ -10,7 +10,7 @@
         <img src="{{imgUrl}}" />
       </div>
       {{/if}}
-      <textarea disabled class="story-text" style="padding-top:{{paddingTopStory}}px">{{story.text}}</textarea>
+      <textarea placeholder="What was the best thing that happened to you?" disabled class="story-text" style="padding-top:{{paddingTopStory}}px">{{story.text}}</textarea>
       <div class="story-date">
         <p class="story-date-month">{{date_month}}</p>
         <p class="story-date-date">{{date_date}}</p>
@@ -28,4 +28,8 @@
 </div>
 
 </div>
+
+
+
+
 </template>
