--- a/client/style/_global.scss
+++ b/client/style/_global.scss
@@ -20,7 +20,7 @@ body {
   overflow-x:hidden;
   margin:0;
   padding:0;
-  background:$bg;
+  background:$yellow;
   color: $grey1;
 }
 .bg {
@@ -69,12 +69,12 @@ body {
   z-index:10;
   width:100%;
   height:100%;
-  background:rgba(49,43,44,0);
+  background:rgba($grey1,0);
   &.no-transition{
     @include transition(all 0);
   }
   &.visible{
-    background:rgba(49,43,44,.5);
+    background:rgba($grey1,.9);
     pointer-events:auto;
   }
   .cover-area{
@@ -198,6 +198,75 @@ body {
   font-family:"ratio",Arial;
   line-height:1.2em;
 }
+
+
+/* ==========================================================================
+   Popover styles
+   ========================================================================== */
+
+
+.modal {
+  @include accelerate;
+  @include prefix(transform, translateX(-50%) translateY(-50%));
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 2000;
+  visibility: hidden;
+  min-width: 320px;
+  max-width: 630px;
+  width: 50%;
+  height: auto;
+  &.show { visibility: visible; }
+}
+
+.modal-overlay {
+  @include prefix(transition, all 0.3s);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  background: $yellow;
+  opacity: 0;
+}
+
+.modal.show ~ .modal-overlay {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal-content {
+  @include prefix(transition, all 0.3s);
+  @include prefix(transform, scale(0.8));
+  opacity: 0;
+  text-align:center;
+  p {
+    @include text-h1;
+    color:#ffffff;
+    margin:10px 0;
+    span {color:$yellow-high}
+  }
+  .modal-button {
+    text-align:center;
+    display:inline-block;
+    width:180px;
+    margin:10px;
+    padding:20px 0;
+    @include text-smallcaps;
+    color:#ffffff;
+    background:rgba($yellow-high,.75);
+    text-decoration:none;
+    &:hover {background:$yellow-high;}
+  }
+}
+.modal.show .modal-content {
+  @include prefix(transform, scale(1));
+  opacity: 1;
+}
+
 
 /* ==========================================================================
    Loader styles
