--- a/client/style/_story.scss
+++ b/client/style/_story.scss
@@ -84,11 +84,15 @@
           width: 95%;
           margin: 0 auto;
           padding:120px 10% 120px 10%;
-          font-size: 24px;
+          font-size: 32px;
           line-height: 1.4em;
           box-sizing: border-box;
           text-align: left;
           max-height: 100%;
+        }
+        &.scroll-more {
+          font-size: 24px;
+          line-height: 1.4em;
         }
       }
       .story-date,.profile-grid-stories-date {
