--- a/client/style/main.css
+++ b/client/style/main.css
@@ -40,7 +40,7 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
-  background: #fcf9f5;
+  background: #ffc157;
   color: #312b2c; }
 
 .bg {
@@ -140,7 +140,7 @@ body {
     -o-transition: all 0;
     transition: all 0; }
   .cover.visible, .cover-transition.visible {
-    background: rgba(49, 43, 44, 0.5);
+    background: rgba(49, 43, 44, 0.9);
     pointer-events: auto; }
   .cover .cover-area, .cover-transition .cover-area {
     z-index: 0;
@@ -230,6 +230,108 @@ body {
 /* ==========================================================================
    Text styles
    ========================================================================== */
+/* ==========================================================================
+   Popover styles
+   ========================================================================== */
+.modal {
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  perspective: 1000;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -o-perspective: 1000;
+  -ms-perspective: 1000;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -o-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 2000;
+  visibility: hidden;
+  min-width: 320px;
+  max-width: 630px;
+  width: 50%;
+  height: auto; }
+  .modal.show {
+    visibility: visible; }
+
+.modal-overlay {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  background: #ffc157;
+  opacity: 0; }
+
+.modal.show ~ .modal-overlay {
+  opacity: 1;
+  visibility: visible; }
+
+.modal-content {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  transform: scale(0.8);
+  opacity: 0;
+  text-align: center; }
+  .modal-content p {
+    font-family: "ratio",Arial;
+    font-weight: 100;
+    font-size: 42px;
+    color: #ffffff;
+    margin: 10px 0; }
+    .modal-content p span {
+      color: #ffea85; }
+  .modal-content .modal-button {
+    text-align: center;
+    display: inline-block;
+    width: 180px;
+    margin: 10px;
+    padding: 20px 0;
+    font-family: "futura-pt",Arial;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 16px;
+    letter-spacing: 2px;
+    color: #ffffff;
+    background: rgba(255, 234, 133, 0.75);
+    text-decoration: none; }
+    .modal-content .modal-button:hover {
+      background: #ffea85; }
+
+.modal.show .modal-content {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+  opacity: 1; }
+
 /* ==========================================================================
    Loader styles
    ========================================================================== */
@@ -1848,6 +1950,7 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
       width: 20%;
       height: 270px; }
       .profile-grid-stories.wide, .profile-grid-stories.large {
+        width: 40%;
         height: 540px; } }
 
 .profile-grid-stories-img {
@@ -2267,11 +2370,14 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
       width: 95%;
       margin: 0 auto;
       padding: 120px 10% 120px 10%;
-      font-size: 24px;
+      font-size: 32px;
       line-height: 1.4em;
       box-sizing: border-box;
       text-align: left;
       max-height: 100%; }
+    .story .story-text.scroll-more, .story .profile-grid-stories-story.scroll-more, .profile-grid-stories.story .story-text.scroll-more, .profile-grid-stories.story .profile-grid-stories-story.scroll-more {
+      font-size: 24px;
+      line-height: 1.4em; }
   .story .story-date, .story .profile-grid-stories-date, .profile-grid-stories.story .story-date, .profile-grid-stories.story .profile-grid-stories-date {
     -webkit-transition: top 0.5s;
     -moz-transition: top 0.5s;
