--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -3,7 +3,7 @@
 @import "landing";
 @import "journal";
 @import "sidebar";
-@import "dashboard";
+// @import "dashboard";
 @import "profile";
 @import "story";
 @import "misc";
