--- a/client/views/journal/story.html
+++ b/client/views/journal/story.html
@@ -10,7 +10,7 @@
         <img src="{{imgUrl}}" />
       </div>
       {{/if}}
-      <textarea placeholder="What was the best thing that happened to you?" disabled class="story-text" style="padding-top:{{paddingTopStory}}px">{{story.text}}</textarea>
+      <textarea placeholder="What was the best thing that happened to you{{prettyDate}}?" disabled class="story-text" style="padding-top:{{paddingTopStory}}px">{{story.text}}</textarea>
       <div class="story-date">
         <p class="story-date-month">{{date_month}}</p>
         <p class="story-date-date">{{date_date}}</p>
@@ -18,9 +18,11 @@
 
       {{#isolate}}
         {{#if edit}}
-        <a class="story-buttons done" href="#">Done</a>
+        <a class="story-buttons done button" href="#">Done</a>
         {{else}}
-        <a class="story-buttons edit" href="#">Edit</a>
+        {{#if isOwner}}
+          <a class="story-buttons edit" href="#">Edit</a>
+        {{/if}}
         <a class="story-buttons close" href="#">Close</a>
         {{/if}}
       {{/isolate}}
