--- a/client/views/journal/story.html
+++ b/client/views/journal/story.html
@@ -21,9 +21,9 @@
         <a class="story-buttons done button" href="#">Done</a>
         {{else}}
         {{#if isOwner}}
-          <a class="story-buttons edit" href="#">Edit</a>
+          <a class="story-buttons edit icon-pencil" href="#">&nbsp;</a>
         {{/if}}
-        <a class="story-buttons close" href="#">Close</a>
+        <a class="story-buttons close icon-cancel" href="#">&nbsp;</a>
         {{/if}}
       {{/isolate}}
   </div>
