--- a/client/views/profile/profile_top.html
+++ b/client/views/profile/profile_top.html
@@ -5,6 +5,6 @@
     <div class="profile-top-description">
       You are visiting <strong>{{displayName}}</strong>'s profile.
     <div>
-    <a class="profile-top-what" href="/landing">What's Besterday?</a>
+    <a class="profile-top-what" href="/landing">What is this?</a>
   </div>
 </template>
