--- a/client/style/_misc.scss
+++ b/client/style/_misc.scss
@@ -1,5 +1,90 @@
 
 
+/* ==========================================================================
+   Icon Font
+   ========================================================================== */
+
+
+
+@font-face {
+  font-family: 'icomoon';
+  src:url('/fonts/icomoon.eot');
+  src:url('/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/icomoon.woff') format('woff'),
+    url('/fonts/icomoon.ttf') format('truetype'),
+    url('/fonts/icomoon.svg#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Use the following CSS code if you want to use data attributes for inserting your icons */
+[data-icon]:before {
+  font-family: 'icomoon';
+  content: attr(data-icon);
+  speak: none;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Use the following CSS code if you want to have a class per icon */
+/*
+Instead of a list of all class selectors,
+you can use the generic selector below, but it's slower:
+[class*="icon-"] {
+*/
+.icon-cancel, .icon-camera, .icon-twitter, .icon-facebook, .icon-google-plus, .icon-lock, .icon-unlocked, .icon-pencil, .icon-image, .icon-cog, .icon-menu, .icon-download, .icon-eject {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-cancel:before {
+  content: "\71";
+}
+.icon-camera:before {
+  content: "\63";
+}
+.icon-twitter:before {
+  content: "\74";
+}
+.icon-facebook:before {
+  content: "\66";
+}
+.icon-google-plus:before {
+  content: "\67";
+}
+.icon-lock:before {
+  content: "\6c";
+}
+.icon-unlocked:before {
+  content: "\75";
+}
+.icon-pencil:before {
+  content: "\65";
+}
+.icon-image:before {
+  content: "\70";
+}
+.icon-cog:before {
+  content: "\73";
+}
+.icon-menu:before {
+  content: "\6d";
+}
+.icon-download:before {
+  content: "\64";
+}
+.icon-eject:before {
+  content: "\6f";
+}
+
 
 
 /* ==========================================================================
