--- a/client/style/main.css
+++ b/client/style/main.css
@@ -341,6 +341,11 @@ body {
   font-size: 16px;
   letter-spacing: 2px;
   color: #ffffff;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
   border-radius: 3px; }
 
 /* ==========================================================================
@@ -1226,6 +1231,105 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     left: 0; }
   .profile-top .profile-top-what {
     right: 0; }
+
+.profile-menu {
+  z-index: 9;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  width: 44px;
+  height: 44px;
+  color: white; }
+  .profile-menu a.icon-menu {
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
+    display: block;
+    border-radius: 3px;
+    width: 44px;
+    height: 44px;
+    background: #000000;
+    text-align: center;
+    line-height: 44px;
+    color: #726d6e;
+    cursor: pointer; }
+    .profile-menu a.icon-menu:hover {
+      background: #ffae41;
+      color: #ffffff; }
+  .profile-menu.active .profile-menu-sub {
+    opacity: 1;
+    visibility: visible; }
+
+.profile-menu-edit-picture, .profile-menu-edit-name, .profile-menu-edit-email, .profile-menu-edit-password, .profile-menu-edit-done, .profile-menu-edit-delete {
+  padding: 10px 10px 12px 10px;
+  border-top: 1px solid #312b2c; }
+
+.profile-menu-sub {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 54px;
+  border-radius: 3px;
+  visibility: hidden;
+  background: #443f41;
+  font-size: 12px;
+  width: 240px;
+  overflow: hidden;
+  text-align: left; }
+  .profile-menu-sub label {
+    font-family: "futura-pt",Arial;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 16px;
+    letter-spacing: 2px;
+    margin: 0 0 8px 0;
+    display: block;
+    color: #726d6e;
+    line-height: 20px;
+    font-size: 11px; }
+  .profile-menu-sub input {
+    font-weight: 200;
+    font-size: 18px;
+    font-family: "ratio",Arial;
+    line-height: 1.2em;
+    padding: 0 10px;
+    width: 200px;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #726d6e;
+    background: #312b2c;
+    color: #e5e1e1;
+    line-height: 32px; }
+  .profile-menu-sub a {
+    font-family: "futura-pt",Arial;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 16px;
+    letter-spacing: 2px;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
+    display: block;
+    padding: 10px 12px;
+    height: 24px;
+    color: #ffffff;
+    color: #726d6e;
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 24px; }
+    .profile-menu-sub a:hover {
+      background: #ffae41;
+      color: #ffffff; }
+    .profile-menu-sub a span.icon {
+      float: right;
+      line-height: 24px;
+      font-size: 11px;
+      width: 14px;
+      text-align: center; }
 
 /* ==========================================================================
    Profile Header
@@ -2252,21 +2356,33 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     .story .story-buttons.close, .profile-grid-stories.story .story-buttons.close {
       top: 8px;
       right: 8px;
-      background: #ffc157;
+      color: #ffc157;
       width: 30px;
       height: 30px;
-      text-indent: -9999em; }
+      text-align: center;
+      line-height: 30px;
+      -webkit-transition: all 0.2s;
+      -moz-transition: all 0.2s;
+      -ms-transition: all 0.2s;
+      -o-transition: all 0.2s;
+      transition: all 0.2s; }
       .story .story-buttons.close:hover, .profile-grid-stories.story .story-buttons.close:hover {
-        background: #ffea85; }
+        color: #ffea85; }
     .story .story-buttons.edit, .profile-grid-stories.story .story-buttons.edit {
       top: 8px;
       right: 46px;
-      background: #25b399;
+      color: #25b399;
       width: 30px;
       height: 30px;
-      text-indent: -9999em; }
+      text-align: center;
+      line-height: 30px;
+      -webkit-transition: all 0.2s;
+      -moz-transition: all 0.2s;
+      -ms-transition: all 0.2s;
+      -o-transition: all 0.2s;
+      transition: all 0.2s; }
       .story .story-buttons.edit:hover, .profile-grid-stories.story .story-buttons.edit:hover {
-        background: #53ecce; }
+        color: #53ecce; }
     .story .story-buttons.done, .profile-grid-stories.story .story-buttons.done {
       bottom: 32px;
       margin: 0 auto;
@@ -2295,6 +2411,82 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
         padding-right: 0; } }
   .story:hover::after, .profile-grid-stories.story:hover::after {
     opacity: 0; }
+
+/* ==========================================================================
+   Icon Font
+   ========================================================================== */
+@font-face {
+  font-family: 'icomoon';
+  src: url("/fonts/icomoon.eot");
+  src: url("/fonts/icomoon.eot?#iefix") format("embedded-opentype"), url("/fonts/icomoon.woff") format("woff"), url("/fonts/icomoon.ttf") format("truetype"), url("/fonts/icomoon.svg#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+/* Use the following CSS code if you want to use data attributes for inserting your icons */
+[data-icon]:before {
+  font-family: 'icomoon';
+  content: attr(data-icon);
+  speak: none;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased; }
+
+/* Use the following CSS code if you want to have a class per icon */
+/*
+Instead of a list of all class selectors,
+you can use the generic selector below, but it's slower:
+[class*="icon-"] {
+*/
+.icon-cancel, .icon-camera, .icon-twitter, .icon-facebook, .icon-google-plus, .icon-lock, .icon-unlocked, .icon-pencil, .icon-image, .icon-cog, .icon-menu, .icon-download, .icon-eject {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased; }
+
+.icon-cancel:before {
+  content: "\71"; }
+
+.icon-camera:before {
+  content: "\63"; }
+
+.icon-twitter:before {
+  content: "\74"; }
+
+.icon-facebook:before {
+  content: "\66"; }
+
+.icon-google-plus:before {
+  content: "\67"; }
+
+.icon-lock:before {
+  content: "\6c"; }
+
+.icon-unlocked:before {
+  content: "\75"; }
+
+.icon-pencil:before {
+  content: "\65"; }
+
+.icon-image:before {
+  content: "\70"; }
+
+.icon-cog:before {
+  content: "\73"; }
+
+.icon-menu:before {
+  content: "\6d"; }
+
+.icon-download:before {
+  content: "\64"; }
+
+.icon-eject:before {
+  content: "\6f"; }
 
 /* ==========================================================================
    Filepicker
