--- a/client/style/_global.scss
+++ b/client/style/_global.scss
@@ -206,6 +206,17 @@ body {
   line-height:1.2em;
 }
 
+@mixin text-iconfont {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+
 
 /* ==========================================================================
    Popover styles
