--- a/client/style/main.css
+++ b/client/style/main.css
@@ -1259,18 +1259,20 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
       background: #ffae41;
       color: #ffffff; }
   .profile-menu.active .profile-menu-sub {
+    top: 54px;
     opacity: 1;
     visibility: visible; }
 
-.profile-menu-edit-picture, .profile-menu-edit-name, .profile-menu-edit-email, .profile-menu-edit-password, .profile-menu-edit-done, .profile-menu-edit-delete {
-  padding: 10px 10px 12px 10px;
-  border-top: 1px solid #312b2c; }
-
 .profile-menu-sub {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
   opacity: 0;
   position: absolute;
   left: 0;
-  top: 54px;
+  top: 44px;
   border-radius: 3px;
   visibility: hidden;
   background: #443f41;
@@ -1278,58 +1280,85 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
   width: 240px;
   overflow: hidden;
   text-align: left; }
-  .profile-menu-sub label {
-    font-family: "futura-pt",Arial;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 16px;
-    letter-spacing: 2px;
-    margin: 0 0 8px 0;
-    display: block;
-    color: #726d6e;
-    line-height: 20px;
-    font-size: 11px; }
-  .profile-menu-sub input {
+
+.profile-menu-edit .profile-menu-edit-picture, .profile-menu-edit .profile-menu-edit-name, .profile-menu-edit .profile-menu-edit-email, .profile-menu-edit .profile-menu-edit-password, .profile-menu-edit .profile-menu-edit-done, .profile-menu-edit .profile-menu-edit-delete {
+  padding: 10px 2px 12px 2px; }
+.profile-menu-edit label {
+  font-family: "futura-pt",Arial;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 2px;
+  margin: 0 8px;
+  display: block;
+  color: #726d6e;
+  line-height: 20px;
+  font-size: 11px; }
+.profile-menu-edit input {
+  font-weight: 200;
+  font-size: 18px;
+  font-family: "ratio",Arial;
+  line-height: 1.2em;
+  padding: 0 10px;
+  width: 216px;
+  outline: none;
+  border: none;
+  background: #312b2c;
+  color: #e5e1e1;
+  height: 44px;
+  line-height: 44px; }
+  .profile-menu-edit input:-moz-placeholder, .profile-menu-edit input::-moz-placeholder, .profile-menu-edit input::-webkit-input-placeholder, .profile-menu-edit input:-ms-input-placeholder {
+    color: #443f41; }
+.profile-menu-edit a.button {
+  background: #ff905a;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  padding: 10px 12px;
+  margin: 0 10px;
+  line-height: 24px;
+  height: 24px; }
+  .profile-menu-edit a.button:hover {
+    background: #ffbf4d; }
+.profile-menu-edit .profile-menu-edit-delete {
+  text-align: center; }
+  .profile-menu-edit .profile-menu-edit-delete a {
     font-weight: 200;
     font-size: 18px;
     font-family: "ratio",Arial;
     line-height: 1.2em;
-    padding: 0 10px;
-    width: 200px;
-    outline: none;
-    border: none;
-    border-bottom: 1px solid #726d6e;
-    background: #312b2c;
-    color: #e5e1e1;
-    line-height: 32px; }
-  .profile-menu-sub a {
-    font-family: "futura-pt",Arial;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 16px;
-    letter-spacing: 2px;
-    -webkit-transition: all 0.2s;
-    -moz-transition: all 0.2s;
-    -ms-transition: all 0.2s;
-    -o-transition: all 0.2s;
-    transition: all 0.2s;
-    display: block;
-    padding: 10px 12px;
-    height: 24px;
-    color: #ffffff;
+    font-size: 11px;
     color: #726d6e;
-    text-decoration: none;
-    font-size: 12px;
-    line-height: 24px; }
-    .profile-menu-sub a:hover {
-      background: #ffae41;
-      color: #ffffff; }
-    .profile-menu-sub a span.icon {
-      float: right;
-      line-height: 24px;
-      font-size: 11px;
-      width: 14px;
-      text-align: center; }
+    text-decoration: none; }
+
+.profile-menu-option a {
+  font-family: "futura-pt",Arial;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 2px;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+  display: block;
+  padding: 10px 12px;
+  height: 24px;
+  color: #ffffff;
+  color: #726d6e;
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 24px; }
+  .profile-menu-option a:hover {
+    background: #ffae41;
+    color: #ffffff; }
+  .profile-menu-option a span.icon {
+    float: right;
+    line-height: 24px;
+    font-size: 11px;
+    width: 14px;
+    text-align: center; }
 
 /* ==========================================================================
    Profile Header
@@ -1705,7 +1734,7 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
   line-height: normal;
   color: #312b2c;
   text-decoration: none; }
-  .profile-grid-stories:before {
+  .profile-grid-stories::before {
     right: -1em;
     display: inline-block;
     height: 100%;
@@ -1717,16 +1746,31 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     -ms-transition: opacity 0.3s;
     -o-transition: opacity 0.3s;
     transition: opacity 0.3s;
+    font-family: 'icomoon';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     z-index: 0;
+    padding: 10px;
     background-color: #ffc157;
+    color: #ffea85;
     content: "";
+    text-align: right;
     opacity: 0;
     pointer-events: none; }
+  .profile-grid-stories[data-public="true"]::after {
+    content: "\75"; }
+  .profile-grid-stories[data-public="false"]::after {
+    content: "\6c"; }
   .profile-grid-stories.alt-1 {
     background: #ff905a;
     /* Old browsers */
@@ -1833,7 +1877,7 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     opacity: 1;
     top: 50%; }
   .profile-grid-stories:hover:not(.no-hover)::after {
-    opacity: .85; }
+    opacity: .95; }
   @media screen and (max-width: 768px) {
     .profile-grid-stories {
       width: 50%;
