--- a/client/views/profile/profile_grid.html
+++ b/client/views/profile/profile_grid.html
@@ -2,7 +2,7 @@
   <div class="profile-grid"><div class="profile-grid-inner">
 
     {{#each stories}}
-    <a class="profile-grid-stories{{#if img}} img{{/if}} {{randomClasses}}" data-date="{{date}}" href="/story/{{_id}}">
+    <a class="profile-grid-stories{{#if img}} img{{/if}} {{randomClasses}}" data-date="{{date}}" data-public="{{public}}" href="/story/{{_id}}">
       {{#if img}}
       <div class="profile-grid-stories-img">
         <img src="{{imgUrl}}" />
